--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 SECRET_KEY=your_secret_key
 AWS_ACCESS_KEY_ID=your_access_key_id
 AWS_SECRET_ACCESS_KEY=your_secret_access_key
+DATABASE_URL=postgresql://username:password@hostname/database_name
